# pixels-to-predictions

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/search/: overnight_v1.py
docker/: Dockerfile.thor
report/: main.tex  references.bib
results/ablations/: 20260505-175401-prompt_ablations.md  20260506-112058-calibration-search.md  20260509-152659-calibration-search.md  best-overnight-ranking.md  failure_analysis_v1.md
scripts/: build_best_ensemble.py  calibration_search.py  ensemble.py  failure_analysis.py  generate_captions.py  make_submission.py  overnight.sh  overnight_runner.py  run_prompt_ablations.py  run_v3_pipeline.sh  sanity_check.py  setup_data.py
src/pixels_to_predictions/: __init__.py  budget.py  config.py  data.py  evaluate.py  model.py  predict.py  report.py  seed.py  train.py
src/pixels_to_predictions/search/: __init__.py  __main__.py  experiment.py  runner.py  scheduler.py  space.py  summary.py  trials.py
